# neutrohydro

./: LICENSE  README.md  data3.csv  neutrohydro_cli.py  paper.aux  paper.bbl  paper.bib  paper.blg  paper.md  paper.out  paper.tex  papertemplate.txt  pyproject.toml
.claude/: settings.local.json
docs/: NeutroHydro_Complete_Documentation.html  NeutroHydro_Complete_Documentation.md  api_modules.md  api_pipeline.md  attribution.md  combined_docs.html  combined_docs.md  document.tex  encoder.md  examples_advanced.md  examples_basic.md  final_critical_review.md  hydrogeochemical_processes.md  index.md  installation.md  interpreting_results.md  limitations.md  mathematical_critique.md  mathematical_framework.md  minerals.md  model.md  nvip.md  preprocessing.md  quality_check.md  quickstart.md  visualization.md
examples/: basic_example.py  check_quality.py  plot_results.py  run_data3.py  run_data_csv_report.py  run_integrated_model.py  run_pipeline_with_plots.py  run_thermo_example.py  run_visualization.py
neutrohydro_results/: minerals.csv  nsr.csv  nvip.csv  predictions.csv  samples.csv  summary.json
scripts/: convert_html_to_pdf.ps1
src/neutrohydro/: __init__.py  cli.py  encoder.py  interpretation.py  minerals.py  nvip.py  pipeline.py  preprocessing.py  quality_check.py  speciation.py  visualization.py
src/neutrohydro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_attribution.py  test_comprehensive_features.py  test_conversion_integration.py  test_encoder.py  test_interpretation.py  test_minerals.py  test_model.py  test_nvip.py  test_pipeline.py  test_preprocessing.py  test_quality_check.py  test_speciation.py
