[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutrohydro"
version = "1.0.0"
description = "Neutrosophic chemometrics for groundwater analysis: NDG encoder, PNPLS regression, NVIP decomposition, and stoichiometric mineral inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dickson Abdul-Wahab", email = "dabdul-wahab@live.com"},
    {name = "Ebenezer Aquisman Asare", email = "aquisman1989@gmail.com"},
    {name = "University of Ghana", email = "dabdul-wahab@live.com"}
]
keywords = [
    "chemometrics",
    "groundwater",
    "neutrosophic",
    "PLS",
    "hydrogeochemistry",
    "water quality",
    "mineral inference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
all = [
    "neutrohydro[dev,viz]",
]

[project.scripts]
neutrohydro = "neutrohydro.cli:main"
neutrohydro-pipeline = "neutrohydro.cli:pipeline_main"

[project.urls]
Homepage = "https://github.com/dabdul-wahab1988/neutrohydro"
Documentation = "https://github.com/dabdul-wahab1988/neutrohydro/tree/main/docs"
Repository = "https://github.com/dabdul-wahab1988/neutrohydro"
ORCID = "https://orcid.org/0000-0001-7446-5909"
LinkedIn = "https://www.linkedin.com/in/dickson-abdul-wahab-0764a1a9/"
ResearchGate = "https://www.researchgate.net/profile/Dickson-Abdul-Wahab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
